  in.

--Fixed potential level-0 difficulty-free power-up-building exploit.

--Changed so that hearts are knocked off higher self when hit to thwart the 
  heart rush exploit.

--Changed to never decay hearts.

--Next-higher-self's hearts are always trimmed to match lower self's hearts to
  thwart heart-bootstrapping exploit.




Version 10   2011-February-13

--Bouncing enemy bullets are now properly killed when enemy is killed (thanks 
  Alexey Zubkov).

--Fixed bug in resetting containing enemy or token powers after knock-down.

--Fixed yet another tutorial-related crash (thanks Rico).

--Fixed bug with enemy health bars (thanks Alexey Zubkov).

--Fixed non-determinism in recorded game playback caused by synchronization 
  with music thread for flashing path to rise marker.

--Shortened delay for display of rise marker path when player standing still.

--Added % key to toggle playback display (for taking screens or videos).

--Added inverted colors for negative levels, and moved game/tutorial start up 
  to level 1.

--Added a proper end message to tutorial.

--Switched to '@' to quit, because F4 is not available on some macs.

--Fixed bug in token pass-up when grabbing tokens right before rising.

--Fixed so that health bar for self in higher level on knock-down doesn't 
  instantly appear to refill itself.

--Added secure level-stack saving on exit to thwart reload-grind strategy.

--Fixed fade bug when hearts knocked off of lower level during zoom-out.




Version 9    2011-February-9

--Added a robot-player mode for testing.

--Fixed crash on pause after picking up a token that was recently entered 
  (thanks Rico).

--Fixed a crash caused by high-level burst bullets (thanks Alexey Zubkov). 

--Fixed to stop playback and print message when end of recorded game file is
  reached (helpful for debugging).

--Display rough estimate of playback fraction on screen.

--Fixed player positioning round-off errors that were causing sprite artifacts.
